app/scss/main.scss
@use 'reset';
@use 'font';
@use 'color';


body{
    font-family: 'Spartan';
    background: url('../images/bg-pattern-top-mobile.svg'), url('../images/bg-pattern-bottom-mobile.svg');
    background-repeat: no-repeat, no-repeat;
    background-position:   top  left  , bottom right ;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    padding: 4rem 1rem;
    font-size: 15px;
    
}


.header__container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
}


/*Top Container*/
.main__container{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.title{
    text-align: center;
    padding: 2rem;
    font-weight: 700;
    font-size: 2.2rem;
    color: color.$very-dark-magenta;
}
.title__container{
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-width: 370px;
}

.content{
   text-align: center;
    padding: 1rem;
}
//Rating Stars Section


.rating{
    background: color.$light-grayish-magenta;
    width:360px ;
    margin: 1.4rem;
    border-radius: 5px;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
 
    

    
    &__container{
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    &__stars{
        width: 100%;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        padding: .5rem;
        gap: .5rem;
    
    }
    &__reviews{
        font-weight: 700;
        text-align: center;
        color: color.$very-dark-magenta
    
    }


}


//Card Section 
.card{
    background: color.$very-dark-magenta;
    color: white;
    padding: 2.2rem ;
    margin:.5rem 0; 
    border-radius: 6px;
    max-width: 360px;
    &__container{
        width: 100%;
        display: flex;  
        flex-direction: column; 
        justify-content: center;
        align-items: center;
    }
    
    &__content{
        color: color.$light-grayish-magenta;
        padding: 1rem 0 0 0;
        text-indent:5px; 
    }
    &__buyer{
        width: 100%;
        display: flex;   
        &-name-status{
           display: flex; 
           flex-direction: column;
           justify-content: center;
        }
        &-name{
            font-size: .9rem;
            font-weight: 700;
        }
        &-status{
            font-size: .9rem;
            font-weight: 700;
            color: color.$soft-pink;
        }
        
    }
    &__buyer-avatar{
        border-radius: 3rem;
        width: 50px;
        margin:1rem 2rem 0 0; 

    }

}


// Footer
.attribution {
  font-size: 11px;
  text-align: center;
  margin-top: 1rem;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

//Media Query
@media (min-width:950px){
    body{
        background: url('../images/bg-pattern-top-desktop.svg'), url('../images/bg-pattern-bottom-desktop.svg');
        background-repeat: no-repeat, no-repeat;
        background-position:   top  left  , bottom right ;
    }

    .title__container{
        max-width: 500px;
        
    }
    .title{
        font-size: 3rem;
        padding: 1rem;
        text-align: left;
    }
  
    .content{
        font-size: 1.1rem;
        text-align: left;
        line-height: 1.5rem;
    }
   
    .header__container{
        flex-direction: row;
        gap: 1rem;
        justify-content: space-between;
        
       
    
    }
    .main__container{

        margin: auto;
        max-width: 1200px;
        
    }
   
    .card{
        max-height: 500px;
        max-width: 370px;
        padding-bottom: 3rem;
        &__container{
            flex-direction: row;
            gap: .5rem;
            justify-content: space-between;
            margin: 1rem;
        }
        &:nth-child(2){
            margin:3rem 0 0 0;     
        }
        &:nth-child(3){
            margin:5rem 0 0 0;     
        }
    }
    .rating{
        flex-direction: row;
        width: 450px;
        margin: .5rem;


        
        &__container{
            width: 50%;
        }
        &__stars{
           justify-content: left;
           max-width: 40%;
           align-content: center;
         
        }
        &__left{
            align-self: flex-start;
        }
        &__center{
            align-self: center;
        }
        &__right{
            align-self: flex-end;
        }

    }





}

